# openicu-project-template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CITATION.cff  Dockerfile  LICENSE  README.md  pyproject.toml
.devcontainer/: .env  devcontainer-lock.json  devcontainer.json  docker-compose.yml  local.env.example
.devcontainer/scripts/: post-create.sh  post-start.sh
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  dependabot.yml
.github/workflows/: continuous_delivery.yml  continuous_integration.yml
docker/: start.sh
docs/arc/: building_block.md  concepts.md  constraints.md  context.md  decisions.md  deployment.md  glossary.md  introduction.md  quality.md  risks.md  runtime.md  strategy.md
notebooks/: pipeline.ipynb
