[project]
name = "project_name"  # TODO
description = "Template for openicu project"  # TODO
version = "0.0.1"
license = "MIT"  # TODO
authors = [
    { name = "Paul-B98" }  # TODO
]
maintainers = [
    { name = "Paul-B98" }  # TODO
]
readme = "README.md"
keywords = ["Python Lib"]  # TODO
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.14"
dependencies = [
    "open-icu>=0.0.1",
]

[project.urls]
homepage = "https://github.com/aidh-ms/openicu-project-template"  # TODO
repository = "https://github.com/aidh-ms/openicu-project-template"  # TODO
changelog = "https://github.com/aidh-ms/openicu-project-template/releases"  # TODO
issues = "https://github.com/aidh-ms/openicu-project-template/issues"  # TODO
documentation = "https://github.com/aidh-ms/openicu-project-template/wiki"  # TODO

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyterlab>=4.6.0",
    "ruff>=0.15.17",
    "ty>=0.0.49",
]

[tool.uv]
exclude-newer = "P7D"
exclude-newer-package = { open-icu = false }
